Fix the visualization of paginated comments on mobile

--- a/scss/_proposal.scss
+++ b/scss/_proposal.scss
@@ -88,6 +88,10 @@
   }
 
   #comments {
-    overflow: auto;
+    height: 1500px;
   }
+}
+.large #proposal #comments {
+  height: auto;
+  overflow: hidden;
 }
